--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,12 @@
 board = waveshare-epaper
 platform = espressif32@1.11.1
 framework = arduino
-build_flags = -DBOARD_LED_ON=1 -Wno-write-strings -DESP32 -DDEBUG_ENABLED -D PIOENV=\"$PIOENV\" -D PIOPLATFORM=\"$PIOPLATFORM\" -D PIOFRAMEWORK=\"$PIOFRAMEWORK\"
+build_flags = -DBOARD_LED_ON=1 -Wno-write-strings -DESP32 
+              -DDEBUG_ENABLED 
+              -DPIOENV=\"$PIOENV\" 
+              -DPIOPLATFORM=\"$PIOPLATFORM\" 
+              -DPIOFRAMEWORK=\"$PIOFRAMEWORK\"
+
 lib_deps = SPI
            GxEPD2@1.2.3
            Adafruit GFX Library@1.6.1
