show rise and set times of sun and moon and the moon phases

--- a/lib/App/App.hpp.sample
+++ b/lib/App/App.hpp.sample
@@ -7,7 +7,7 @@
 #define WIFI_PASS "<your wifi password>"
 
 #define APP_NAME "ESP32 Weather Forecast"
-#define APP_VERSION "1.0.1"
+#define APP_VERSION "1.1.4"
 
 #define TIMEZONE "CET-1CEST-2,M3.5.0/02:00:00,M10.5.0/03:00:00"
 #define NTP_SERVER1 "ptbtime1.ptb.de"
@@ -15,5 +15,8 @@
 #define NTP_SERVER3 "pool.ntp.org"
 
 #define BOARD_LED_OFF (1-BOARD_LED_ON)
+
+#define HOME_LATITUDE  0
+#define HOME_LONGITUDE 0
 
 #endif
