--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = waveshare-epaper
 board_build.partitions = spiffs64k.csv
 platform = espressif32@1.11.1
 framework = arduino
+extra_scripts = post:extra_script.py
 build_flags = -DBOARD_LED_ON=1 -Wno-write-strings -DESP32 
               -DDEBUG_ENABLED 
               -DPIOENV=\"$PIOENV\" 
@@ -29,6 +30,6 @@ lib_deps = SPI
 monitor_speed = 115200
 upload_speed = 460800
 
-upload_protocol = espota
-upload_port = 192.168.5.53
-upload_flags = --auth=otapass
+;upload_protocol = espota
+;upload_port = 192.168.5.53
+;upload_flags = --auth=otapass
