--- a/lib/App/App.hpp.sample
+++ b/lib/App/App.hpp.sample
@@ -7,7 +7,7 @@
 #define WIFI_PASS "<your wifi password>"
 
 #define APP_NAME "ESP32 Weather Forecast"
-#define APP_VERSION "1.3.2"
+#define APP_VERSION "1.4.1"
 
 #define TIMEZONE "CET-1CEST-2,M3.5.0/02:00:00,M10.5.0/03:00:00"
 #define NTP_SERVER1 "ptbtime1.ptb.de"
@@ -18,5 +18,9 @@
 
 #define HOME_LATITUDE  0
 #define HOME_LONGITUDE 0
+
+// openweathermap.org
+#define OPEN_WEATHER_MAP_CITY_ID "<your openweathermap.org city id>"
+#define OPEN_WEATHER_MAP_APPID "<your openweathermap.org appid>"
 
 #endif
