partition file spiffs64k.cvs is moved to boards directory

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 
 [env:waveshare-epaper]
 board = waveshare-epaper
-board_build.partitions = spiffs64k.csv
+board_build.partitions = boards/spiffs64k.csv
 platform = espressif32@1.11.1
 framework = arduino
 extra_scripts = post:extra_script.py
