Split icon font into two fonts sparing memory

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,6 @@ lib_deps = SPI
 monitor_speed = 115200
 upload_speed = 460800
 
-;upload_protocol = espota
-;upload_port = 192.168.5.53
-;upload_flags = --auth=otapass
+upload_protocol = espota
+upload_port = 192.168.5.53
+upload_flags = --auth=otapass
