--- a/platformio.ini
+++ b/platformio.ini
@@ -16,10 +16,10 @@ platform = espressif32@1.11.1
 framework = arduino
 extra_scripts = post:extra_script.py
 build_flags = -DBOARD_LED_ON=1 -Wno-write-strings -DESP32 
-              -DDEBUG_ENABLED 
               -DPIOENV=\"$PIOENV\" 
               -DPIOPLATFORM=\"$PIOPLATFORM\" 
               -DPIOFRAMEWORK=\"$PIOFRAMEWORK\"
+              -DESP32_BROWNOUT_DET_LVL_SEL_0
 
 lib_deps = SPI
            GxEPD2@1.2.3
